--- a/EDA/Titanic/Titanic .ipynb
+++ b/EDA/Titanic/Titanic .ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4a1e1817",
    "metadata": {},
    "outputs": [],
@@ -78,6 +78,48 @@
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2c975b46",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['anagrams',\n",
+       " 'anscombe',\n",
+       " 'attention',\n",
+       " 'brain_networks',\n",
+       " 'car_crashes',\n",
+       " 'diamonds',\n",
+       " 'dots',\n",
+       " 'dowjones',\n",
+       " 'exercise',\n",
+       " 'flights',\n",
+       " 'fmri',\n",
+       " 'geyser',\n",
+       " 'glue',\n",
+       " 'healthexp',\n",
+       " 'iris',\n",
+       " 'mpg',\n",
+       " 'penguins',\n",
+       " 'planets',\n",
+       " 'seaice',\n",
+       " 'taxis',\n",
+       " 'tips',\n",
+       " 'titanic']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sns.get_dataset_names()"
    ]
   },
   {
@@ -538,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "8822cb97",
    "metadata": {
     "scrolled": true
@@ -816,7 +858,7 @@
        "[891 rows x 15 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1338,9 +1380,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>count</th>\n",
-       "      <th>unique</th>\n",
-       "      <th>top</th>\n",
-       "      <th>freq</th>\n",
        "      <th>mean</th>\n",
        "      <th>std</th>\n",
        "      <th>min</th>\n",
@@ -1354,171 +1393,81 @@
        "    <tr>\n",
        "      <th>survived</th>\n",
        "      <td>891.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>0.383838</td>\n",
        "      <td>0.486592</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pclass</th>\n",
        "      <td>891.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>2.308642</td>\n",
        "      <td>0.836071</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>2.0000</td>\n",
+       "      <td>3.0000</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>age</th>\n",
        "      <td>714.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>29.699118</td>\n",
        "      <td>14.526497</td>\n",
        "      <td>0.42</td>\n",
-       "      <td>20.125</td>\n",
-       "      <td>28.0</td>\n",
+       "      <td>20.1250</td>\n",
+       "      <td>28.0000</td>\n",
        "      <td>38.0</td>\n",
-       "      <td>80.0</td>\n",
+       "      <td>80.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sibsp</th>\n",
        "      <td>891.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>0.523008</td>\n",
        "      <td>1.102743</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>8.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>parch</th>\n",
        "      <td>891.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>0.381594</td>\n",
        "      <td>0.806057</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>6.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>fare</th>\n",
        "      <td>891.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>32.204208</td>\n",
        "      <td>49.693429</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>7.9104</td>\n",
        "      <td>14.4542</td>\n",
        "      <td>31.0</td>\n",
        "      <td>512.3292</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>class</th>\n",
-       "      <td>891</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Third</td>\n",
-       "      <td>491</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>adult_male</th>\n",
-       "      <td>891</td>\n",
-       "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "      <td>537</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>deck</th>\n",
-       "      <td>203</td>\n",
-       "      <td>7</td>\n",
-       "      <td>C</td>\n",
-       "      <td>59</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>alone</th>\n",
-       "      <td>891</td>\n",
-       "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "      <td>537</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            count unique    top freq       mean        std   min     25%  \\\n",
-       "survived    891.0    NaN    NaN  NaN   0.383838   0.486592   0.0     0.0   \n",
-       "pclass      891.0    NaN    NaN  NaN   2.308642   0.836071   1.0     2.0   \n",
-       "age         714.0    NaN    NaN  NaN  29.699118  14.526497  0.42  20.125   \n",
-       "sibsp       891.0    NaN    NaN  NaN   0.523008   1.102743   0.0     0.0   \n",
-       "parch       891.0    NaN    NaN  NaN   0.381594   0.806057   0.0     0.0   \n",
-       "fare        891.0    NaN    NaN  NaN  32.204208  49.693429   0.0  7.9104   \n",
-       "class         891      3  Third  491        NaN        NaN   NaN     NaN   \n",
-       "adult_male    891      2   True  537        NaN        NaN   NaN     NaN   \n",
-       "deck          203      7      C   59        NaN        NaN   NaN     NaN   \n",
-       "alone         891      2   True  537        NaN        NaN   NaN     NaN   \n",
-       "\n",
-       "                50%   75%       max  \n",
-       "survived        0.0   1.0       1.0  \n",
-       "pclass          3.0   3.0       3.0  \n",
-       "age            28.0  38.0      80.0  \n",
-       "sibsp           0.0   1.0       8.0  \n",
-       "parch           0.0   0.0       6.0  \n",
-       "fare        14.4542  31.0  512.3292  \n",
-       "class           NaN   NaN       NaN  \n",
-       "adult_male      NaN   NaN       NaN  \n",
-       "deck            NaN   NaN       NaN  \n",
-       "alone           NaN   NaN       NaN  "
+       "          count       mean        std   min      25%      50%   75%       max\n",
+       "survived  891.0   0.383838   0.486592  0.00   0.0000   0.0000   1.0    1.0000\n",
+       "pclass    891.0   2.308642   0.836071  1.00   2.0000   3.0000   3.0    3.0000\n",
+       "age       714.0  29.699118  14.526497  0.42  20.1250  28.0000  38.0   80.0000\n",
+       "sibsp     891.0   0.523008   1.102743  0.00   0.0000   0.0000   1.0    8.0000\n",
+       "parch     891.0   0.381594   0.806057  0.00   0.0000   0.0000   0.0    6.0000\n",
+       "fare      891.0  32.204208  49.693429  0.00   7.9104  14.4542  31.0  512.3292"
       ]
      },
      "execution_count": 7,
@@ -1527,7 +1476,98 @@
     }
    ],
    "source": [
-    "df.describe(exclude='object').T"
+    "df.describe().T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "dd796efb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>unique</th>\n",
+       "      <th>top</th>\n",
+       "      <th>freq</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>sex</th>\n",
+       "      <td>891</td>\n",
+       "      <td>2</td>\n",
+       "      <td>male</td>\n",
+       "      <td>577</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>embarked</th>\n",
+       "      <td>889</td>\n",
+       "      <td>3</td>\n",
+       "      <td>S</td>\n",
+       "      <td>644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>who</th>\n",
+       "      <td>891</td>\n",
+       "      <td>3</td>\n",
+       "      <td>man</td>\n",
+       "      <td>537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>embark_town</th>\n",
+       "      <td>889</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>alive</th>\n",
+       "      <td>891</td>\n",
+       "      <td>2</td>\n",
+       "      <td>no</td>\n",
+       "      <td>549</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            count unique          top freq\n",
+       "sex           891      2         male  577\n",
+       "embarked      889      3            S  644\n",
+       "who           891      3          man  537\n",
+       "embark_town   889      3  Southampton  644\n",
+       "alive         891      2           no  549"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe(include='object').T"
    ]
   },
   {
@@ -1837,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "eb66a6dd",
    "metadata": {},
    "outputs": [],
@@ -1847,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "731686ee",
    "metadata": {},
    "outputs": [],
@@ -1857,7 +1897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "195e655d",
    "metadata": {},
    "outputs": [
@@ -1878,7 +1918,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
