--- a/Regression/linear_Multi.ipynb
+++ b/Regression/linear_Multi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "4           5  7.196409   5.596398"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "497         498  4.530545   3.710193"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "(498, 3)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,33 +215,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "439    7.481521\n",
-       "210    7.478447\n",
-       "13     7.466653\n",
-       "219    7.463510\n",
-       "279    7.451501\n",
        "Name: income, dtype: float64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data['income'].max()\n",
-    "data.income.nlargest()"
+    "data.income.nlargest(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +247,7 @@
        "Name: happiness, dtype: float64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +268,7 @@
        "Index(['Unnamed: 0', 'income', 'happiness'], dtype='object')"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +355,7 @@
        "4  7.196409   5.596398"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +462,7 @@
        "happiness  6.863388  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +485,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +508,7 @@
        "0"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -602,8 +598,8 @@
       "Dep. Variable:              happiness   R-squared:                       0.749\n",
       "Model:                            OLS   Adj. R-squared:                  0.749\n",
       "Method:                 Least Squares   F-statistic:                     1483.\n",
-      "Date:                Thu, 20 Jun 2024   Prob (F-statistic):          3.96e-151\n",
-      "Time:                        11:36:48   Log-Likelihood:                -540.72\n",
+      "Date:                Wed, 03 Jul 2024   Prob (F-statistic):          3.96e-151\n",
+      "Time:                        09:23:23   Log-Likelihood:                -540.72\n",
       "No. Observations:                 498   AIC:                             1085.\n",
       "Df Residuals:                     496   BIC:                             1094.\n",
       "Df Model:                           1                                         \n",
