--- a/Python Oops/Python Oops.ipynb
+++ b/Python Oops/Python Oops.ipynb
@@ -112,6 +112,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Foo:\n",
+    "    def __init__(self,x=30):\n",
+    "        self.x=x\n",
+    "    def foo(self, y):\n",
+    "        print(self.x+y)\n",
+    "\n",
+    "f=Foo()\n",
+    "f.foo(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
