--- a/Python Oops/Opp's.ipynb
+++ b/Python Oops/Opp's.ipynb
@@ -137,6 +137,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Addition:\n",
+    "    def __init__(self):\n",
+    "        self.x=10\n",
+    "        self.y=20\n",
+    "\n",
+    "    def adding(self):\n",
+    "        return self.x+self.y \n",
+    "\n",
+    "a = Addition()\n",
+    "print(a.adding())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "young\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = int(input('enter a nuber'))\n",
+    "\n",
+    "class categorise():\n",
+    "    def __init__(self, x):\n",
+    "        self.x=x\n",
+    "\n",
+    "    def category(self, x=X):\n",
+    "        if self.x > 14:\n",
+    "            return \"young\"\n",
+    "        elif self.x > 24:   \n",
+    "            return \"middle aged\"\n",
+    "        elif self.x > 34:\n",
+    "            return \"mature\"\n",
+    "        else:\n",
+    "            return \"elderly\"\n",
+    "\n",
+    "b = categorise(x)\n",
+    "print(b.category())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
