--- a/Python Basics/Decorator & Iterator.ipynb
+++ b/Python Basics/Decorator & Iterator.ipynb
@@ -471,6 +471,98 @@
     "\n",
     "slow_function()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Iterators**\n",
+    "\n",
+    "An iterator is an object that contains a countable number of values & can be iterated upon, meaning you can traverse throught all the values. In Python, an iterator must implement two special method, __iter__() and __next__().\n",
+    "\n",
+    "**Creating an Itrator**\n",
+    "\n",
+    "1. Define a class with __iter__() and __next__() method:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyIterator:\n",
+    "    def __init__(self, start, end):\n",
+    "        self.current = start\n",
+    "        self.end = end\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        if self.current <= self.end:\n",
+    "            self.current += 1\n",
+    "            result = self.current - 1\n",
+    "            return result\n",
+    "        else:\n",
+    "            raise StopIteration\n",
+    "\n",
+    "my_iterator = MyIterator(1, 10)\n",
+    "\n",
+    "for number in my_iterator:\n",
+    "    print(number)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Using the built-in iter() and next() functions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [1,2,3,4,5,6]\n",
+    "my_iterator = iter(my_list)\n",
+    "\n",
+    "print(next(my_iterator))\n",
+    "print(next(my_iterator))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
