--- a/Python Oops/Python Oops.ipynb
+++ b/Python Oops/Python Oops.ipynb
@@ -264,17 +264,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Account holder: John Doe\n",
+      "\n",
+      "Menu:\n",
+      "1. Check balance\n",
+      "2. Deposit money\n",
+      "3. Withdraw money\n",
+      "4. Exit\n",
       "Current balance: $1000\n",
-      "Deposit of $500 successful. New balance: $1500\n",
-      "Withdrawal of $200 successful. New balance: $1300\n"
+      "\n",
+      "Menu:\n",
+      "1. Check balance\n",
+      "2. Deposit money\n",
+      "3. Withdraw money\n",
+      "4. Exit\n",
+      "Exiting...\n"
      ]
     }
    ],
@@ -304,14 +314,34 @@
     "    def get_account_holder(self):\n",
     "        return f\"Account holder: {self._account_holder}\"\n",
     "\n",
-    "# Creating an instance of the BankAccount class\n",
-    "account = BankAccount(\"John Doe\", 1000)\n",
+    "def main():\n",
+    "    account = BankAccount(\"John Doe\", 1000)\n",
     "\n",
-    "# Accessing protected attributes and methods\n",
-    "print(account.get_account_holder())  \n",
-    "print(account.get_balance())  \n",
-    "print(account.deposit(500))  \n",
-    "print(account.withdraw(200))  "
+    "    while True:\n",
+    "        print(\"\\nMenu:\")\n",
+    "        print(\"1. Check balance\")\n",
+    "        print(\"2. Deposit money\")\n",
+    "        print(\"3. Withdraw money\")\n",
+    "        print(\"4. Exit\")\n",
+    "        \n",
+    "        choice = input(\"Choose an option: \")\n",
+    "\n",
+    "        if choice == \"1\":\n",
+    "            print(account.get_balance())\n",
+    "        elif choice == \"2\":\n",
+    "            amount = float(input(\"Enter deposit amount: \"))\n",
+    "            print(account.deposit(amount))\n",
+    "        elif choice == \"3\":\n",
+    "            amount = float(input(\"Enter withdrawal amount: \"))\n",
+    "            print(account.withdraw(amount))\n",
+    "        elif choice == \"4\":\n",
+    "            print(\"Exiting...\")\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Invalid choice, please try again.\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   },
   {
