--- a/Python Basics/Decorator & Iterator.ipynb
+++ b/Python Basics/Decorator & Iterator.ipynb
@@ -476,7 +476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Iterators**\n",
+    "### **Iterators**\n",
     "\n",
     "An iterator is an object that contains a countable number of values & can be iterated upon, meaning you can traverse throught all the values. In Python, an iterator must implement two special method, __iter__() and __next__().\n",
     "\n",
