--- a/Web Scarpping/Fake Job/Web Scrapping.ipynb
+++ b/Web Scarpping/Fake Job/Web Scrapping.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alec Baldwin's Rust trial dismissed over hidden evidence\n",
+      "Extravagant wedding of India tycoon Ambani’s son in full swing\n",
+      "Five jailed for Ecuador presidential candidate's murder\n",
+      "Orban goes global as self-styled peacemaker without a plan\n",
+      "Death and rubble fill streets of Tal Al-Sultan as rescuers dodge Israeli fire\n",
+      "Extravagant wedding of India tycoon Ambani’s son in full swing\n",
+      "Meet the tycoons behind the grand Indian wedding\n",
+      "Many Democrats are sticking with Biden. Here's why\n",
+      "Biden is teetering. Trump's plan? Let it happen\n",
+      "Five jailed for Ecuador presidential candidate's murder\n",
+      "Children killed in Nigeria school collapse\n",
+      "German shock at reported Russian assassination plot\n",
+      "More human remains found as UK police name suspect\n",
+      "Poland considers downing Russian missiles over Ukraine\n",
+      "French rugby players charged with raping woman in Argentina\n",
+      "Features and analysis\n",
+      "I cannot forgive Mugabe's soldiers – massacre survivor\n",
+      "As Apple headset reaches Europe, will VR ever hit the mainstream?\n",
+      "In photos: Kim Kardashian, Bieber and Rihanna at grand India wedding\n",
+      "Moving into Downing Street: life behind the iconic black door\n",
+      "Eminem's The Death of Slim Shady 'a mixed bag'\n",
+      "As Apple headset reaches Europe, will VR ever hit the mainstream?\n",
+      "How Banksy sparked a steel town's love for colour\n",
+      "US allies try to 'Trump-proof' Nato - but is that even possible?\n",
+      "In photos: Kim Kardashian, Bieber and Rihanna at grand India wedding\n",
+      "Most watched\n",
+      "Former PMs, film and sports stars join Ambani wedding\n",
+      "Lavish Ambani wedding divides opinions in India\n",
+      "Biden says Kamala Harris 'qualified to be president'\n",
+      "Watch moment case collapses against tearful Baldwin\n",
+      "Watch: River rages after Storm Beryl floods Vermont\n",
+      "Also in news\n",
+      "Drums, fire and ice: Photos of the week\n",
+      "Former PMs, film and sports stars join Ambani wedding\n",
+      "Normal People star: I'd like to revisit role\n",
+      "The three-way international tussle for Euro 24 star Lamine Yamal\n",
+      "Titanic mission to map wreck in greatest-ever detail\n",
+      "Former PMs, film and sports stars join Ambani wedding\n",
+      "We're the Wimbledon ball girls who took on the pros\n",
+      "Prince William to attend Euro 2024 final in Berlin\n",
+      "Normal People star: I'd like to revisit role\n",
+      "Most read\n",
+      "Alec Baldwin's Rust trial dismissed over hidden evidence\n",
+      "Extravagant wedding of India tycoon Ambani’s son in full swing\n",
+      "Many Democrats are sticking with Biden. Here's why\n",
+      "Meet the tycoons behind the grand Indian wedding\n",
+      "German shock at reported Russian assassination plot\n",
+      "The marathon Indian wedding turning heads around the world\n",
+      "More human remains found as police name suspect\n",
+      "Biden is teetering. Trump's plan? Let it happen\n",
+      "French rugby players charged with raping woman in Argentina\n",
+      "Orban goes global as self-styled peacemaker without a plan\n",
+      "Sport\n",
+      "England reaching Euros final feels 'normal' - Southgate\n",
+      "Alcaraz eyes 'perfect Sunday' against Djokovic & England\n",
+      "Remember me as 'decent', says retiring Anderson\n",
+      "Why Mainoo has 'wow factor' - and could be one the greats\n",
+      "Paolini faces Krejcikova in unexpected final showdown\n",
+      "Alcaraz eyes 'perfect Sunday' against Djokovic & England\n",
+      "Boy prince Bellingham ready for biggest stage\n",
+      "Van der Merwe equals Scotland record in win over USA\n",
+      "Remember me as 'decent', says retiring Anderson\n",
+      "Follow BBC on:\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = 'https://www.bbc.com/news'\n",
+    "response = requests.get(url) \n",
+    "  \n",
+    "soup = BeautifulSoup(response.text, 'html.parser') \n",
+    "headlines = soup.find('body').find_all('h2') \n",
+    "for x in headlines: \n",
+    "    print(x.text.strip()) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Web Scraping the Website for Fake Jobs**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +121,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2986,7 +3078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -5905,7 +5997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -8323,7 +8415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8335,7 +8427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8352,7 +8444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -8375,7 +8467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -8518,7 +8610,7 @@
        "[100 rows x 4 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8531,12 +8623,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "final_dataframe.to_excel('Products.xlsx')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
