--- a/Pandas/Update Pandas.ipynb
+++ b/Pandas/Update Pandas.ipynb
@@ -2248,7 +2248,7 @@
    ],
    "source": [
     "# Removing duplicates\n",
-    "df.drop_duplicates()"
+    "df.drop_duplicates(inplace=True)"
    ]
   },
   {
@@ -2887,8 +2887,7 @@
     }
    ],
    "source": [
-    "df = df.drop('Name1',axis=1)\n",
-    "df"
+    "df.drop('Name1',axis=1, inplace=True)"
    ]
   },
   {
@@ -3399,7 +3398,7 @@
     }
    ],
    "source": [
-    "df[-3:-1:1]"
+    "df[-3:-1:2]"
    ]
   },
   {
@@ -4828,7 +4827,7 @@
     }
    ],
    "source": [
-    "df.groupby('Name')['Salary'].sum() # sum of Salary for each name"
+    "df.groupby(['Name'])['Salary'].sum() # sum of Salary for each name"
    ]
   },
   {
