--- a/EDA/Car/Car/Simple CAR EDA.ipynb
+++ b/EDA/Car/Car/Simple CAR EDA.ipynb
@@ -8,12 +8,12 @@
     "\n",
     "**Analysis Goals**\n",
     "\n",
-    "- Descriptive Analysis: Summarize the dataset to understand the distribution of various features such as year of manufacture, kilometers driven, fuel type, transmission, owner type, and seating capacity.\n",
-    "- Price Analysis: Investigate the factors affecting the resale price of cars. Analyze the relationship between the price and other features such as year, kilometers driven, fuel type, engine capacity, and power.\n",
-    "- Geographical Insights: Explore the geographical distribution of car sales and prices. Identify which locations have higher or lower average resale prices.\n",
-    "- Trend Analysis: Examine trends over time, such as how car prices have changed over the years and the impact of the year of manufacture on resale prices.\n",
-    "- Missing Data Handling: Address missing values in the dataset, particularly for the Mileage, Engine, Power, Seats, New_Price, and Price columns. Determine appropriate methods for handling or imputing these values, such as using mean, median, mode, or predictive modeling.\n",
-    "- Correlation Analysis: Conduct a correlation analysis to identify the strength and direction of relationships between different numerical features and the resale price."
+    "- **Descriptive Analysis:** Summarize the dataset to understand the distribution of various features such as year of manufacture, kilometers driven, fuel type, transmission, owner type, and seating capacity.\n",
+    "- **Price Analysis:** Investigate the factors affecting the resale price of cars. Analyze the relationship between the price and other features such as year, kilometers driven, fuel type, engine capacity, and power.\n",
+    "- **Geographical Insights:** Explore the geographical distribution of car sales and prices. Identify which locations have higher or lower average resale prices.\n",
+    "- **Trend Analysis:** Examine trends over time, such as how car prices have changed over the years and the impact of the year of manufacture on resale prices.\n",
+    "- **Missing Data Handling:** Address missing values in the dataset, particularly for the Mileage, Engine, Power, Seats, New_Price, and Price columns. Determine appropriate methods for handling or imputing these values, such as using mean, median, mode, or predictive modeling.\n",
+    "- **Correlation Analysis:** Conduct a correlation analysis to identify the strength and direction of relationships between different numerical features and the resale price."
    ]
   },
   {
@@ -1989,26 +1989,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the count plot, we can have below observations\n",
-    "\n",
-    "- Mumbai has the highest number of cars available for purchase, followed by Hyderabad and Coimbatore\n",
-    "- ~53% of cars have fuel type as Diesel this shows diesel cars provide higher performance\n",
-    "- ~72% of cars have manual transmission\n",
-    "- ~82 % of cars are First owned cars. This shows most of the buyers prefer to purchase first-owner cars\n",
-    "- ~20% of cars belong to the brand Maruti followed by 19% of cars belonging to Hyundai\n",
-    "- WagonR ranks first among all models which are available for purchase\n",
-    "\n",
-    "\n",
-    "\n",
-    "### **8: EDA Bivariate Analysis**\n",
-    "\n",
-    "Now, let’s move ahead with bivariate analysis. Bivariate Analysis helps to understand how variables are related to each other and the relationship between dependent and independent variables present in the dataset.\n",
-    "\n",
-    "For Numerical variables, Pair plots and Scatter plots are widely been used to do Bivariate Analysis.\n",
-    "\n",
-    "A Stacked bar chart can be used for categorical variables if the output variable is a classifier. Bar plots can be used if the output variable is continuous\n",
-    "\n",
-    "In our example, a pair plot has been used to show the relationship between two Categorical variables."
+    "### **8: EDA Bivariate Analysis**"
    ]
   },
   {
@@ -2049,6 +2030,32 @@
     "- Engine and Power increase, and the price of the car increases\n",
     "\n",
     "A bar plot can be used to show the relationship between Categorical variables and continuous variables "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the count plot, we can have below observations\n",
+    "\n",
+    "- Mumbai has the highest number of cars available for purchase, followed by Hyderabad and Coimbatore\n",
+    "- ~53% of cars have fuel type as Diesel this shows diesel cars provide higher performance\n",
+    "- ~72% of cars have manual transmission\n",
+    "- ~82 % of cars are First owned cars. This shows most of the buyers prefer to purchase first-owner cars\n",
+    "- ~20% of cars belong to the brand Maruti followed by 19% of cars belonging to Hyundai\n",
+    "- WagonR ranks first among all models which are available for purchase\n",
+    "\n",
+    "\n",
+    "\n",
+    "### **9: EDA Bivariate Analysis**\n",
+    "\n",
+    "Now, let’s move ahead with bivariate analysis. Bivariate Analysis helps to understand how variables are related to each other and the relationship between dependent and independent variables present in the dataset.\n",
+    "\n",
+    "For Numerical variables, Pair plots and Scatter plots are widely been used to do Bivariate Analysis.\n",
+    "\n",
+    "A Stacked bar chart can be used for categorical variables if the output variable is a classifier. Bar plots can be used if the output variable is continuous\n",
+    "\n",
+    "In our example, a pair plot has been used to show the relationship between two Categorical variables."
    ]
   },
   {
