--- a/Pandas/sql_intigration.ipynb
+++ b/Pandas/sql_intigration.ipynb
@@ -6,12 +6,138 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pip install mysql.connector.python"
+    "#pip install mysql.connector.python\n",
+    "#pip install pandas sqlalchemy mysql-connector-python"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine, types"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Car Dataset**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data loaded successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the dataset\n",
+    "df = pd.read_csv(r'D:\\Python\\EDA\\Car\\Car\\Car.csv')\n",
+    "\n",
+    "# Define MySQL connection string\n",
+    "engine = create_engine('mysql+mysqlconnector://root:Sameer%40786@localhost/eda_practice')\n",
+    "\n",
+    "# Define data types for MySQL table\n",
+    "dtype_mapping = {\n",
+    "    'S.No.': types.Integer(),\n",
+    "    'Name': types.String(255),\n",
+    "    'Location': types.String(255),\n",
+    "    'Year': types.Integer(),\n",
+    "    'Kilometers_Driven': types.Integer(),\n",
+    "    'Fuel_Type': types.String(50),\n",
+    "    'Transmission': types.String(50),\n",
+    "    'Owner_Type': types.String(50),\n",
+    "    'Mileage': types.String(50),\n",
+    "    'Engine': types.String(50),\n",
+    "    'Power': types.String(50),\n",
+    "    'Seats': types.Float(),\n",
+    "    'New_Price': types.String(255),  # Adjust length based on your data\n",
+    "    'Price': types.Float()\n",
+    "}\n",
+    "\n",
+    "# Write the DataFrame to the MySQL table, handling null values\n",
+    "df.to_sql(name='cars', con=engine, if_exists='replace', index=False, dtype=dtype_mapping)\n",
+    "\n",
+    "print(\"Data loaded successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Global Super Store Dataset**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data loaded successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the dataset\n",
+    "df = pd.read_csv(r'D:\\Python\\EDA\\Global_Store\\Global_SuperStore_16.csv', parse_dates=['Order Date', 'Ship Date'])\n",
+    "\n",
+    "df.drop('Unnamed: 0', axis=1, inplace=True)\n",
+    "\n",
+    "# Define MySQL connection string\n",
+    "engine = create_engine('mysql+mysqlconnector://root:Sameer%40786@localhost/eda_practice')\n",
+    "\n",
+    "# Define data types for MySQL table\n",
+    "dtype_mapping = {\n",
+    "    'Row ID': types.Integer(),\n",
+    "    'Order ID': types.String(50),\n",
+    "    'Order Date': types.DateTime(),\n",
+    "    'Ship Date': types.DateTime(),\n",
+    "    'Ship Mode': types.String(50),\n",
+    "    'Customer ID': types.String(50),\n",
+    "    'Customer Name': types.String(100),\n",
+    "    'Segment': types.String(50),\n",
+    "    'Postal Code': types.Float(),  # Consider checking and handling missing values for postal codes\n",
+    "    'City': types.String(100),\n",
+    "    'State': types.String(50),\n",
+    "    'Country': types.String(50),\n",
+    "    'Region': types.String(50),\n",
+    "    'Market': types.String(50),\n",
+    "    'Product ID': types.String(50),\n",
+    "    'Category': types.String(50),\n",
+    "    'Sub-Category': types.String(50),\n",
+    "    'Product Name': types.String(255),\n",
+    "    'Sales': types.Float(),\n",
+    "    'Quantity': types.Integer(),\n",
+    "    'Discount': types.Float(),\n",
+    "    'Profit': types.Float(),\n",
+    "    'Shipping Cost': types.Float(),\n",
+    "    'Order Priority': types.String(50),\n",
+    "    'Returned': types.String(50)  # Adjust length if needed\n",
+    "}\n",
+    "\n",
+    "# Write the DataFrame to the MySQL table, handling null values\n",
+    "df.to_sql(name='global_superstore', con=engine, if_exists='replace', index=False, dtype=dtype_mapping)\n",
+    "\n",
+    "print(\"Data loaded successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,30 +158,39 @@
     "  host=\"localhost\",               #hostname\n",
     "  user=\"root\",                   # the user who has privilege to the db\n",
     "  passwd=\"Sameer@786\",               #password for user\n",
-    "  database=\"company\",               #database name\n",
+    "  database=\"eda_practice\",               #database name\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"select * from employees;\""
+    "#mydb.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"select * from global_superstore;\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_13196\\1944403643.py:1: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  a = pd.read_sql(query,mydb)\n"
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_18408\\2144673299.py:1: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  b = pd.read_sql(query,mydb)\n"
      ]
     },
     {
@@ -79,94 +214,204 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>EmployeeID</th>\n",
-       "      <th>EmployeeName</th>\n",
-       "      <th>Department</th>\n",
-       "      <th>Salary</th>\n",
-       "      <th>BirthDate</th>\n",
-       "      <th>HireDate</th>\n",
-       "      <th>ManagerID</th>\n",
+       "      <th>Row ID</th>\n",
+       "      <th>Order ID</th>\n",
+       "      <th>Order Date</th>\n",
+       "      <th>Ship Date</th>\n",
+       "      <th>Ship Mode</th>\n",
+       "      <th>Customer ID</th>\n",
+       "      <th>Customer Name</th>\n",
+       "      <th>Segment</th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>City</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Sub-Category</th>\n",
+       "      <th>Product Name</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Discount</th>\n",
+       "      <th>Profit</th>\n",
+       "      <th>Shipping Cost</th>\n",
+       "      <th>Order Priority</th>\n",
+       "      <th>Returned</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>John Doe</td>\n",
-       "      <td>IT</td>\n",
-       "      <td>65000.0</td>\n",
-       "      <td>1990-05-15</td>\n",
-       "      <td>2015-02-20</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>40098</td>\n",
+       "      <td>CA-2014-AB10015140-41954</td>\n",
+       "      <td>2014-11-11</td>\n",
+       "      <td>2014-11-13</td>\n",
+       "      <td>First Class</td>\n",
+       "      <td>AB-100151402</td>\n",
+       "      <td>Aaron Bergman</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>73120.0</td>\n",
+       "      <td>Oklahoma City</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Technology</td>\n",
+       "      <td>Phones</td>\n",
+       "      <td>Samsung Convoy 3</td>\n",
+       "      <td>221.98</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>62.1544</td>\n",
+       "      <td>40.77</td>\n",
+       "      <td>High</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Jane Smith</td>\n",
-       "      <td>HR</td>\n",
-       "      <td>55000.0</td>\n",
-       "      <td>1985-08-22</td>\n",
-       "      <td>2018-01-10</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Bob Johnson</td>\n",
-       "      <td>Finance</td>\n",
-       "      <td>70000.0</td>\n",
-       "      <td>1988-12-10</td>\n",
-       "      <td>2019-06-15</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Alice White</td>\n",
-       "      <td>IT</td>\n",
-       "      <td>60000.0</td>\n",
-       "      <td>1995-04-02</td>\n",
-       "      <td>2020-03-01</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Charlie Brown</td>\n",
-       "      <td>Finance</td>\n",
-       "      <td>80000.0</td>\n",
-       "      <td>1980-11-30</td>\n",
-       "      <td>2010-07-05</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>26341</td>\n",
+       "      <td>IN-2014-JR162107-41675</td>\n",
+       "      <td>2014-02-05</td>\n",
+       "      <td>2014-02-07</td>\n",
+       "      <td>Second Class</td>\n",
+       "      <td>JR-162107</td>\n",
+       "      <td>Justin Ritter</td>\n",
+       "      <td>Corporate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Wollongong</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Furniture</td>\n",
+       "      <td>Chairs</td>\n",
+       "      <td>Novimex Executive Leather Armchair, Black</td>\n",
+       "      <td>3709.40</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>-288.7650</td>\n",
+       "      <td>923.63</td>\n",
+       "      <td>Critical</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>2 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   EmployeeID   EmployeeName Department   Salary   BirthDate    HireDate  \\\n",
-       "0           1       John Doe         IT  65000.0  1990-05-15  2015-02-20   \n",
-       "1           2     Jane Smith         HR  55000.0  1985-08-22  2018-01-10   \n",
-       "2           3    Bob Johnson    Finance  70000.0  1988-12-10  2019-06-15   \n",
-       "3           4    Alice White         IT  60000.0  1995-04-02  2020-03-01   \n",
-       "4           5  Charlie Brown    Finance  80000.0  1980-11-30  2010-07-05   \n",
+       "   Row ID                  Order ID Order Date  Ship Date     Ship Mode  \\\n",
+       "0   40098  CA-2014-AB10015140-41954 2014-11-11 2014-11-13   First Class   \n",
+       "1   26341    IN-2014-JR162107-41675 2014-02-05 2014-02-07  Second Class   \n",
        "\n",
-       "   ManagerID  \n",
-       "0        NaN  \n",
-       "1        1.0  \n",
-       "2        2.0  \n",
-       "3        1.0  \n",
-       "4        3.0  "
+       "    Customer ID  Customer Name    Segment  Postal Code           City  ...  \\\n",
+       "0  AB-100151402  Aaron Bergman   Consumer      73120.0  Oklahoma City  ...   \n",
+       "1     JR-162107  Justin Ritter  Corporate          NaN     Wollongong  ...   \n",
+       "\n",
+       "     Category Sub-Category                               Product Name  \\\n",
+       "0  Technology       Phones                           Samsung Convoy 3   \n",
+       "1   Furniture       Chairs  Novimex Executive Leather Armchair, Black   \n",
+       "\n",
+       "     Sales Quantity Discount    Profit Shipping Cost  Order Priority  Returned  \n",
+       "0   221.98        2      0.0   62.1544         40.77            High      None  \n",
+       "1  3709.40        9      0.1 -288.7650        923.63        Critical      None  \n",
+       "\n",
+       "[2 rows x 25 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = pd.read_sql(query,mydb)\n",
-    "a"
+    "b = pd.read_sql(query,mydb)\n",
+    "b.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 51290 entries, 0 to 51289\n",
+      "Data columns (total 25 columns):\n",
+      " #   Column          Non-Null Count  Dtype         \n",
+      "---  ------          --------------  -----         \n",
+      " 0   Row ID          51290 non-null  int64         \n",
+      " 1   Order ID        51290 non-null  object        \n",
+      " 2   Order Date      51290 non-null  datetime64[ns]\n",
+      " 3   Ship Date       51290 non-null  datetime64[ns]\n",
+      " 4   Ship Mode       51290 non-null  object        \n",
+      " 5   Customer ID     51290 non-null  object        \n",
+      " 6   Customer Name   51290 non-null  object        \n",
+      " 7   Segment         51290 non-null  object        \n",
+      " 8   Postal Code     9994 non-null   float64       \n",
+      " 9   City            51290 non-null  object        \n",
+      " 10  State           51290 non-null  object        \n",
+      " 11  Country         51290 non-null  object        \n",
+      " 12  Region          51290 non-null  object        \n",
+      " 13  Market          51290 non-null  object        \n",
+      " 14  Product ID      51290 non-null  object        \n",
+      " 15  Category        51290 non-null  object        \n",
+      " 16  Sub-Category    51290 non-null  object        \n",
+      " 17  Product Name    51290 non-null  object        \n",
+      " 18  Sales           51290 non-null  float64       \n",
+      " 19  Quantity        51290 non-null  int64         \n",
+      " 20  Discount        51290 non-null  float64       \n",
+      " 21  Profit          51290 non-null  float64       \n",
+      " 22  Shipping Cost   51290 non-null  float64       \n",
+      " 23  Order Priority  51290 non-null  object        \n",
+      " 24  Returned        2202 non-null   object        \n",
+      "dtypes: datetime64[ns](2), float64(5), int64(2), object(16)\n",
+      "memory usage: 9.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "b.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Row ID                0\n",
+       "Order ID              0\n",
+       "Order Date            0\n",
+       "Ship Date             0\n",
+       "Ship Mode             0\n",
+       "Customer ID           0\n",
+       "Customer Name         0\n",
+       "Segment               0\n",
+       "Postal Code       41296\n",
+       "City                  0\n",
+       "State                 0\n",
+       "Country               0\n",
+       "Region                0\n",
+       "Market                0\n",
+       "Product ID            0\n",
+       "Category              0\n",
+       "Sub-Category          0\n",
+       "Product Name          0\n",
+       "Sales                 0\n",
+       "Quantity              0\n",
+       "Discount              0\n",
+       "Profit                0\n",
+       "Shipping Cost         0\n",
+       "Order Priority        0\n",
+       "Returned          49088\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.isnull().sum() #checking for null values"
    ]
   }
  ],
